--- a/src/main/resources/templates/infrastructure/security/authMe.mustache
+++ b/src/main/resources/templates/infrastructure/security/authMe.mustache
@@ -47,6 +47,8 @@ public ResponseEntity<ApiResponseDto> me(@AuthenticationPrincipal Jwt jwt) {
 	log.info("Auth/me User claims: {}", jwt.getClaims());
 	String username = jwt.getSubject();
 
+	 MetaRequest metaRequest = new MetaRequest();
+
 	UserPrincipal userPrincipal = (UserPrincipal) userDetailsService.loadUserByUsername(username);
 
 	return ResponseEntity.ok(ApiResponseDto.ok(
