--- a/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
+++ b/src/main/resources/templates/infrastructure/security/passwordResetService.mustache
@@ -41,7 +41,8 @@ return token;
 @Transactional
 public boolean resetPassword(String token, String newPassword) {
 try {
-var query = new FindByPasswordResetTokenQuery(PasswordResetToken.create(token));
+MetaRequest metaRequest = new MetaRequest();
+var query = new FindByPasswordResetTokenQuery(PasswordResetToken.create(token),metaRequest);
 var tokenEntity = queryGateway.query(query, PasswordResetResponse.class).get();
 
 if (tokenEntity == null || tokenEntity.getExpiration().isBefore(Instant.now())) return false;
