--- a/src/main/resources/templates/shared/audit/requestContext.mustache
+++ b/src/main/resources/templates/shared/audit/requestContext.mustache
@@ -23,16 +23,19 @@ throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "User ID is required"
 }
 return claim.toString();
 }
-{{#isMultiTenant}}
+
 public static String getTenantId(Jwt jwt) {
-Object claim = jwt.getClaims().get("tenantId");
-if (claim == null) {
-log.warn("Missing 'tenantId' in JWT claims");
-return null;
+	Object claim = jwt.getClaims().get("tenantId");
+	if (claim == null) {
+	log.error("Missing 'tenantId' in JWT claims");
+	throw new ResponseStatusException(HttpStatus.UNAUTHORIZED, "Tenant ID is required");
+	}
+	return claim.toString();
 }
-return claim.toString();
+
+public static Boolean isAdmin(Jwt jwt) {
+	return jwt.getClaimAsString("isAdmin") != null && jwt.getClaimAsString("isAdmin").equals("true");
 }
-{{/isMultiTenant}}
 
 }
 
