--- a/src/main/resources/templates/application/readApplicationService.mustache
+++ b/src/main/resources/templates/application/readApplicationService.mustache
@@ -17,18 +17,18 @@ public class {{className}} {
 private final QueryGateway queryGateway;
 
 
-public {{name}}PagedResponse findAll(int page, int limit) {
+public {{name}}PagedResponse findAll(int page, int limit, MetaRequest metaRequest) {
 
-	FindAll{{name}}Query query = new FindAll{{name}}Query(page, limit);
+	FindAll{{name}}Query query = new FindAll{{name}}Query(page, limit,metaRequest);
 	CompletableFuture<{{name}}PagedResponse> future = queryGateway.query(query,
 	org.axonframework.messaging.responsetypes.ResponseTypes.instanceOf({{name}}PagedResponse.class));
 	return future.join();
 }
 
 
-public {{name}}Response findBy{{name}}Id({{name}}Id value) {
+public {{name}}Response findBy{{name}}Id({{name}}Id value, MetaRequest metaRequest) {
 
-	FindBy{{name}}IdQuery query = new FindBy{{name}}IdQuery(value);
+	FindBy{{name}}IdQuery query = new FindBy{{name}}IdQuery(value,metaRequest);
 	CompletableFuture<{{name}}Response> future = queryGateway.query(query,
 	org.axonframework.messaging.responsetypes.ResponseTypes.instanceOf({{name}}Response.class));
 	return future.join();
@@ -37,9 +37,12 @@ public {{name}}Response findBy{{name}}Id({{name}}Id value) {
 
 {{#searchFields}}
 {{^isId}}
-public List<{{nameAggregate}}Response> findBy{{nameAggregate}}{{nameCapitalized}}({{nameAggregate}}{{nameCapitalized}} value) {
+public List<{{nameAggregate}}Response> findBy{{nameAggregate}}{{nameCapitalized}}(
+	{{nameAggregate}}{{nameCapitalized}} value,
+	MetaRequest metaRequest
+	) {
 
-	FindBy{{nameAggregate}}{{nameCapitalized}}Query query = new FindBy{{nameAggregate}}{{nameCapitalized}}Query(value);
+	FindBy{{nameAggregate}}{{nameCapitalized}}Query query = new FindBy{{nameAggregate}}{{nameCapitalized}}Query(value,metaRequest);
 	CompletableFuture<List<{{nameAggregate}}Response>> future = queryGateway.query(query,
 	org.axonframework.messaging.responsetypes.ResponseTypes.multipleInstancesOf({{nameAggregate}}Response.class));
 	return future.join();
