--- a/src/main/resources/templates/infrastructure/security/authController.mustache
+++ b/src/main/resources/templates/infrastructure/security/authController.mustache
@@ -19,6 +19,7 @@ import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import org.hibernate.context.spi.CurrentTenantIdentifierResolver;
 
 @Tag(name = "Auth", description = "Endpoints for authentication")
 @RestController
@@ -26,8 +27,8 @@ import org.springframework.web.bind.annotation.RestController;
 @RequiredArgsConstructor
 public class AuthController {
 
-private final AuthenticationManager authenticationManager;
-private final JwtService jwtService;
+private final AuthService authService;
+private final CurrentTenantIdentifierResolver currentTenantIdentifierResolver;
 
 @PostMapping("/login")
 @Operation(
@@ -43,34 +44,27 @@ content = @Content(schema = @Schema(implementation = AuthRequestDto.class))
 @ApiResponse(responseCode = "200", description = "Login successful", content = @Content(schema = @Schema(implementation = AuthResponseDto.class))),
 @ApiResponse(responseCode = "401", description = "Unauthorized - invalid credentials", content = @Content(schema = @Schema(implementation = AuthResponseDto.class)))
 })
-public ResponseEntity<AuthResponseDto> authenticate(@org.springframework.web.bind.annotation.RequestBody AuthRequestDto request) {
-	try {
+public ResponseEntity<AuthResponseDto> authenticate(
+	@org.springframework.web.bind.annotation.RequestBody AuthRequestDto request
+	) {
 
-	Authentication authentication = authenticationManager.authenticate(
-			new UsernamePasswordAuthenticationToken(request.getUsername(), request.getPassword())
-	);
+try {
 
-	String token = jwtService.generateToken(authentication);
+		MetaRequest metaRequest = new MetaRequest();
+	{{#isMultiTenant}}
+		metaRequest.setTenantId(currentTenantIdentifierResolver.resolveCurrentTenantIdentifier());
+	{{/isMultiTenant}}
 
-	String tenantId = jwtService.extractTenantId(token);
-
-	return ResponseEntity.ok(
-	AuthResponseDto.builder()
-	.token(token)
-	.tenant(tenantId)
-	.username(authentication.getName())
-	.expirationAt(jwtService.extractExpiration(token))
-	.code(1)
-	.message("Login successful")
-	.build()
-	);
+		AuthResponseDto response = authService.handle(request,metaRequest);
+		return ResponseEntity.ok(response);
 	} catch (Exception e) {
-	e.printStackTrace();
-	return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
-	.body(AuthResponseDto.builder()
-	.code(0)
-	.message("Unauthorized")
-	.build());
+		e.printStackTrace();
+		return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+			.body(AuthResponseDto.builder()
+				.token(null)
+				.code(0)
+				.message("Unauthorized")
+				.build());
+		}
 	}
-	}
-	}
+}
