--- a/src/main/resources/templates/infrastructure/security/securityInitializer.mustache
+++ b/src/main/resources/templates/infrastructure/security/securityInitializer.mustache
@@ -20,7 +20,7 @@ private static final String ADMIN_USERNAME = "admin";
 private static final String USER_USERNAME = "user";
 private static final String PASSWORD_ADMIN = "admin";
 private static final String PASSWORD_USER = "user";
-private static final Set<String> DEFAULT_PERMISSIONS = Set.of("READ", "WRITE", "DELETE");
+private static final Set<String> DEFAULT_PERMISSIONS = Set.of("READ", "WRITE", "DELETE", "IS_ADMIN");
 
 	private final RoleRepository roleRepository;
 	private final PermissionRepository permissionRepository;
