--- a/src/main/resources/templates/presentation/listController.mustache
+++ b/src/main/resources/templates/presentation/listController.mustache
@@ -11,6 +11,8 @@ import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
+import org.springframework.security.oauth2.jwt.Jwt;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.axonframework.queryhandling.QueryGateway;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -55,12 +57,23 @@ content = @Content
 )
 })
 public {{name}}PagedResponse list(
+@AuthenticationPrincipal Jwt jwt,
 @Parameter(description = "Page number (zero-based index)", example = "0")
 @RequestParam(defaultValue = "0") int page,
 
 @Parameter(description = "Number of items per page", example = "10")
 @RequestParam(defaultValue = "10") int limit
 ) {
-	return applicationService.findAll(page,limit);
+
+	MetaRequest metaRequest = MetaRequest.builder()
+		.userId(RequestContext.getUserId(jwt)){{#isMultiTenant}}
+		.tenantId(RequestContext.getTenantId(jwt)){{/isMultiTenant}}
+	.build();
+
+	Boolean isAdmin = RequestContext.isAdmin(jwt) ;
+
+	metaRequest.setIsAdmin( RequestContext.isAdmin(jwt) );
+
+	return applicationService.findAll(page,limit, metaRequest);
  }
 }
