--- a/src/main/resources/templates/shared/dto/metaRequest.mustache
+++ b/src/main/resources/templates/shared/dto/metaRequest.mustache
@@ -14,7 +14,7 @@ import java.io.Serializable;
 @NoArgsConstructor
 @Builder
 public class MetaRequest implements Serializable {
-	private String createdBy;
+	private String userId;
 	private String tenantId;
 	private String apiKey;
 	private String domain;
@@ -22,5 +22,10 @@ public class MetaRequest implements Serializable {
 	private String ip;
 	private String version;
 	private String platform;
+	private Boolean isAdmin;
+
+	public Boolean isAdmin(){
+		return this.isAdmin != null && this.isAdmin;
+	}
 
 }
